==============================================
  
This release has received external contributions from J. Guerber.

Improvements: 

  * In patch size distribution plots, fits are now rescaled when xmin is above 1 
      so they overlay nicely on the observed distribution

Bug fixes: 
  
  * Fixed an error occurring when using xmin = "estimate" in patchdistr_sews

spatialwarnings v3.0.2 (Release date: 2021-12-16)
=================================================
  
Improvements: 
  
  * Matrix attributes are now preserved when generating null matrices (except 
      when shuffling the original matrix, null_method = 'perm')
  
Bug fixes: 
  
  * Computation of Moran's I is now accurate for small matrices
  
spatialwarnings v3.0.0 (Release date: 2021-05-19) 
=================================================

Improvements: 

  * Documentation extended and improved
  
  * Fitting of distributions now uses 'plexpo' and 'trunc' to refer to the 
      exponent of a power-law ("slope") and its exponential truncation (from 
      "expo" and "rate", which were ambiguous)
  
  * EXPERIMENTAL: Variogram-based indicators have been added. Note that this 
      deserves more testing and application to real-world data to make sure that
      the computation of variograms are accurate enough. 
  
  * EXPERIMENTAL: Significance of flow length can now be assessed using the 
      analytical approximation described in Rodriguez et al. (2017)
  
Bug fixes: 
  
  * Fixed a bug where available methods were not displayed in `summary()`
  
  * Fixed a bug where the r-spectrum was wrong when the matrix had an odd number 
      of rows or columns
  
Misc changes: 
  
  * NAs in provided matrices now produce warnings instead of errors
  
  * Dependency to tidyr has been removed (this fixes occasional NOTEs on CRAN
     automated checking)
  
Removals: 

  * All deprecated functions in spatialwarnings v2.0.0 are now defunct
  
spatialwarnings v2.0.0 (Release date: 2020-05-14)